wuhu/prod/picimpact/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picimpact
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picimpact
  template:
    metadata:
      labels:
        app: picimpact
    spec:
      containers:
      - name: picimpact
        image: besscroft/picimpact:latest
        ports:
        - containerPort: 3000
