wuhu/prod/picimpact/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: picimpact
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: picimpact
